--- a/app/assets/stylesheets/components/story.css
+++ b/app/assets/stylesheets/components/story.css
@@ -4,7 +4,7 @@
  */
 
 .story {
-  padding: 1rem;
+  padding: 1rem 1rem 2rem;
   border-top: var(--rule-width) solid var(--color-rule);
   position: relative;
   overflow: hidden;
